--- a/projects/03-PIC16F_LCD16x2/lcd_library/TestLCD.X/nbproject/Makefile-genesis.properties
+++ b/projects/03-PIC16F_LCD16x2/lcd_library/TestLCD.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Sun Dec 31 10:38:54 BRT 2023
+#Sun Dec 31 11:09:55 BRT 2023
 default.languagetoolchain.version=2.45
-default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.15\\packs\\Microchip\\PIC16Fxxx_DFP\\1.4.149
+default.Pack.dfplocation=/Applications/microchip/mplabx/v6.15/packs/Microchip/PIC16Fxxx_DFP/1.4.149
 conf.ids=default
-default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.45\\bin
-host.id=1py0-qi1w-pg
+default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/bin
+host.id=0
 default.platformTool.md5=null
-configurations-xml=2d06b8dbd916f97d04f3911d3ef26bb8
+configurations-xml=96b4df9472154e7e4904d6987afe6ec7
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
-proj.dir=C\:\\Users\\ricar\\MPLABXProjects\\TestLCD.X
-host.platform=windows
+proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/03-PIC16F_LCD16x2/lcd_library/TestLCD.X
+host.platform=mac
