--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ projects/02-Timer/.DS_Store
 /projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F628A_LCD.X/dist/
 /projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F887_LCD.X/dist/
 /projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F887_LCD.X/build/
+/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F876A_LCD.X/dist/
+/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F876A_LCD.X/build/
