--- a/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F876A_LCD.X/nbproject/Makefile-genesis.properties
+++ b/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F876A_LCD.X/nbproject/Makefile-genesis.properties
@@ -1,7 +1,7 @@
 #
-#Mon Jan 01 14:09:56 BRT 2024
+#Mon Jan 01 14:13:54 BRT 2024
 default.languagetoolchain.version=2.45
-default.Pack.dfplocation=
+default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC16Fxxx_DFP/1.6.156
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/bin
 host.id=0
