--- a/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F887_LCD.X/nbproject/Makefile-genesis.properties
+++ b/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F887_LCD.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,12 @@
 #
-#Mon Jan 01 13:56:56 BRT 2024
+#Mon Jan 01 21:09:20 BRT 2024
 default.languagetoolchain.version=2.45
 default.Pack.dfplocation=/Applications/microchip/mplabx/v6.15/packs/Microchip/PIC16Fxxx_DFP/1.4.149
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/bin
 host.id=0
-default.platformTool.md5=null
-configurations-xml=93461b30671019b74419c04ebb488974
+configurations-xml=47372eb324c1b638ec3bf725f43c5de9
+default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
 proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F887_LCD.X
