--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ projects/02-Timer/.DS_Store
 /projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F887_LCD.X/build/
 /projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F876A_LCD.X/dist/
 /projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F876A_LCD.X/build/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/example_dc_motor_01.X/build/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/example_dc_motor_01.X/dist/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_ADC_READER.X/dist/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_ADC_READER.X/build/
