--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ projects/02-Timer/.DS_Store
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/example_dc_motor_01.X/dist/
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_ADC_READER.X/dist/
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_ADC_READER.X/build/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F88F_4_wires_cooler.X/build/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F88F_4_wires_cooler.X/dist/
