--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ projects/02-Timer/.DS_Store
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_ADC_READER.X/build/
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F88F_4_wires_cooler.X/build/
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F88F_4_wires_cooler.X/dist/
+.DS_Store
+.DS_Store
+projects/.DS_Store
