--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ projects/02-Timer/.DS_Store
 projects/.DS_Store
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_cooler_rpm_via_interrupt.X/dist/
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_cooler_rpm_via_interrupt.X/build/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_LCD_4_WIRES_COOLER_LCD.X/build/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_LCD_4_WIRES_COOLER_LCD.X/dist/
