--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ projects/.DS_Store
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_cooler_rpm_via_interrupt.X/build/
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_LCD_4_WIRES_COOLER_LCD.X/build/
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_LCD_4_WIRES_COOLER_LCD.X/dist/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_4_COOLER_LM35_LCD.X/dist/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_4_COOLER_LM35_LCD.X/build/
