--- a/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_4_COOLER_LM35_LCD.X/nbproject/Makefile-genesis.properties
+++ b/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_4_COOLER_LM35_LCD.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Sat Jan 06 12:23:59 BRT 2024
+#Sat Jan 06 12:27:11 BRT 2024
 default.languagetoolchain.version=2.45
 default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC16Fxxx_DFP/1.6.156
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/bin
 host.id=0
-configurations-xml=618a19a853e8589c0c8f7dc3837b7943
-default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
+default.platformTool.md5=null
+configurations-xml=c5ac491c8a51692bb898f378cb573ffe
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
-proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F88F_4_wires_cooler.X
+proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_4_COOLER_LM35_LCD.X
 host.platform=mac
