--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ projects/.DS_Store
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_LCD_4_WIRES_COOLER_LCD.X/dist/
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_4_COOLER_LM35_LCD.X/dist/
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_4_COOLER_LM35_LCD.X/build/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_03_4_COOLER_LM35_LCD_INT.X copy/build/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_03_4_COOLER_LM35_LCD_INT.X copy/dist/
