--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ projects/.DS_Store
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_4_COOLER_LM35_LCD.X/build/
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_03_4_COOLER_LM35_LCD_INT.X copy/build/
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_03_4_COOLER_LM35_LCD_INT.X copy/dist/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_03_4_COOLER_LM35_LCD_INT.X/build/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_03_4_COOLER_LM35_LCD_INT.X/dist/
