--- a/projects/02-Timer/MPLAB_EXAMPLES/example2.X/nbproject/Makefile-genesis.properties
+++ b/projects/02-Timer/MPLAB_EXAMPLES/example2.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,12 @@
 #
-#Sun Jan 07 10:20:42 BRT 2024
+#Sun Jan 07 20:00:18 BRT 2024
 default.languagetoolchain.version=2.45
 default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC16Fxxx_DFP/1.6.156
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/bin
 host.id=0
-default.platformTool.md5=null
-configurations-xml=871eafb8e503a8261b69e36c7ba7d483
+configurations-xml=01458039abf4214c64af4b1022f6f2d2
+default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
 proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/02-Timer/MPLAB_EXAMPLES/example2.X
