--- a/projects/02-Timer/MPLAB_EXAMPLES/example1.X/nbproject/Makefile-genesis.properties
+++ b/projects/02-Timer/MPLAB_EXAMPLES/example1.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,12 @@
 #
-#Sun Jan 07 10:13:53 BRT 2024
+#Sun Jan 07 20:10:40 BRT 2024
 default.languagetoolchain.version=2.45
 default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC16Fxxx_DFP/1.6.156
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/bin
 host.id=0
-default.platformTool.md5=null
-configurations-xml=b04d3b33f521c6fdb86710a4e823f4d3
+configurations-xml=e79eb4e677f023e3a43f59c5d1abfd4e
+default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
 proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/02-Timer/MPLAB_EXAMPLES/example1.X
