--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ projects/.DS_Store
 /projects/99-Servomotor/MPLAB_EXAMPLES/pic16f628a_example.X/build/
 /projects/99-Servomotor/MPLAB_EXAMPLES/pic16f887_example.X/build/
 /projects/99-Servomotor/MPLAB_EXAMPLES/pic16f887_example.X/dist/
+projects/.DS_Store
+projects/.DS_Store
