--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,1 @@
-.DS_Store
-projects/.DS_Store
-projects/01-Blink/.DS_Store
-projects/02-Timer/.DS_Store
-/projects/03-PIC16F_LCD16x2/lcd_library/LCDPIC16F887.X/build/
-/projects/03-PIC16F_LCD16x2/lcd_library/LCDPIC16F887.X/dist/
-/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PIC16F887_LCD/build/
-/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PIC16F887_LCD/dist/
-/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PIC16F628A_LCD/build/
-/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PIC16F628A_LCD/dist/
-/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F628A_LCD.X/build/
-/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F628A_LCD.X/dist/
-/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F887_LCD.X/dist/
-/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F887_LCD.X/build/
-/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F876A_LCD.X/dist/
-/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F876A_LCD.X/build/
-/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/example_dc_motor_01.X/build/
-/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/example_dc_motor_01.X/dist/
-/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_ADC_READER.X/dist/
-/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_ADC_READER.X/build/
-/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F88F_4_wires_cooler.X/build/
-/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F88F_4_wires_cooler.X/dist/
-.DS_Store
-.DS_Store
-projects/.DS_Store
-/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_cooler_rpm_via_interrupt.X/dist/
-/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_cooler_rpm_via_interrupt.X/build/
-/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_LCD_4_WIRES_COOLER_LCD.X/build/
-/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_LCD_4_WIRES_COOLER_LCD.X/dist/
-/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_4_COOLER_LM35_LCD.X/dist/
-/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_4_COOLER_LM35_LCD.X/build/
-/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_03_4_COOLER_LM35_LCD_INT.X copy/build/
-/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_03_4_COOLER_LM35_LCD_INT.X copy/dist/
-/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_03_4_COOLER_LM35_LCD_INT.X/build/
-/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_03_4_COOLER_LM35_LCD_INT.X/dist/
-/projects/02-Timer/MPLAB_EXAMPLES/example2.X/build/
-/projects/02-Timer/MPLAB_EXAMPLES/example2.X/dist/
-/projects/02-Timer/MPLAB_EXAMPLES/example1.X/dist/
-/projects/02-Timer/MPLAB_EXAMPLES/example1.X/build/
-/projects/99-Servomotor/MPLAB_EXAMPLES/pic16f628a_example.X/dist/
-/projects/99-Servomotor/MPLAB_EXAMPLES/pic16f628a_example.X/build/
-/projects/99-Servomotor/MPLAB_EXAMPLES/pic16f887_example.X/build/
-/projects/99-Servomotor/MPLAB_EXAMPLES/pic16f887_example.X/dist/
-projects/.DS_Store
-projects/.DS_Store
+*DS_Store
