--- a/projects/06-LED_RGB/MPLAB_EXAMPLES/pic16f628a_RGB_COMMON_K.X/nbproject/Makefile-genesis.properties
+++ b/projects/06-LED_RGB/MPLAB_EXAMPLES/pic16f628a_RGB_COMMON_K.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Mon Jan 08 06:18:25 BRT 2024
+#Mon Jan 08 10:44:27 BRT 2024
 default.languagetoolchain.version=2.45
 default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC16Fxxx_DFP/1.6.156
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/bin
 host.id=0
-default.platformTool.md5=null
-configurations-xml=37583dcb0f2117d4e6ea20bb99120718
+configurations-xml=553d17bbd8dcc37d31736c4c166f6934
+default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
-proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/06-LED_RGB/MPLAB_EXAMPLES/pic16f628a_example.X
+proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/06-LED_RGB/MPLAB_EXAMPLES/pic16f628a_RGB_COMMON_K.X
 host.platform=mac
