--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@
 /projects/99-Servomotor/MPLAB_EXAMPLES/pic16f628a_example.X/build/
 /projects/99-Servomotor/MPLAB_EXAMPLES/pic16f887_example.X/dist/
 /projects/99-Servomotor/MPLAB_EXAMPLES/pic16f887_example.X/build/
+/projects/06-LED_RGB/MPLAB_EXAMPLES/pic16f628a_proximity_sensor.X/build/
