--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@
 /projects/99-Servomotor/MPLAB_EXAMPLES/pic16f887_example.X/dist/
 /projects/99-Servomotor/MPLAB_EXAMPLES/pic16f887_example.X/build/
 /projects/06-LED_RGB/MPLAB_EXAMPLES/pic16f628a_proximity_sensor.X/build/
+/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F628A_LCD.X/build/
