--- a/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/pic16f628a_HC_S04_sensor.X/nbproject/Makefile-genesis.properties
+++ b/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/pic16f628a_HC_S04_sensor.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Mon Jan 08 18:24:12 BRT 2024
+#Tue Jan 09 09:03:39 BRT 2024
 default.languagetoolchain.version=2.45
-default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC16Fxxx_DFP/1.6.156
+default.Pack.dfplocation=/home/ricardo/.mchp_packs/Microchip/PIC16Fxxx_DFP/1.6.156
 conf.ids=default
-default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/bin
+default.languagetoolchain.dir=/opt/microchip/xc8/v2.45/bin
 host.id=0
 configurations-xml=7b777d133629bc22921abcc01e872ceb
 default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
-proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/pic16f628a_HC_S04_sensor.X
-host.platform=mac
+proj.dir=/home/ricardo/projetos/PIC/PIC16F/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/pic16f628a_HC_S04_sensor.X
+host.platform=linux
