--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@
 /projects/99-Servomotor/MPLAB_EXAMPLES/pic16f887_example.X/build/
 /projects/06-LED_RGB/MPLAB_EXAMPLES/pic16f628a_proximity_sensor.X/build/
 /projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F628A_LCD.X/build/
+/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F887_LCD.X/build/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_03_4_COOLER_LM35_LCD_INT.X/build/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_03_4_COOLER_LM35_LCD_INT.X/dist/
