--- a/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_03_4_COOLER_LM35_LCD_INT.X/nbproject/Makefile-genesis.properties
+++ b/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_03_4_COOLER_LM35_LCD_INT.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Sat Jan 06 21:35:32 BRT 2024
+#Tue Jan 09 10:01:39 BRT 2024
 default.languagetoolchain.version=2.45
-default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC16Fxxx_DFP/1.6.156
+default.Pack.dfplocation=/home/ricardo/.mchp_packs/Microchip/PIC16Fxxx_DFP/1.6.156
 conf.ids=default
-default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/bin
-host.id=0
-configurations-xml=bf2bc628b29a712dfa79e95fef188625
+default.languagetoolchain.dir=/opt/microchip/xc8/v2.45/bin
+host.id=1py0-qi1w-pg
+configurations-xml=0065f144b937d307b6f88ded3062355c
 default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
-proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_03_4_COOLER_LM35_LCD_INT.X
-host.platform=mac
+proj.dir=/home/ricardo/projetos/PIC/PIC16F/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_03_4_COOLER_LM35_LCD_INT.X
+host.platform=linux
