--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@
 /projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F887_LCD.X/build/
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_03_4_COOLER_LM35_LCD_INT.X/build/
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_03_4_COOLER_LM35_LCD_INT.X/dist/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/pic16f628a_hc_s04_ultrasonic_lcd.X/dist/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/pic16f628a_hc_s04_ultrasonic_lcd.X/build/
