--- a/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F628A_01_DC_MOTOR.X/nbproject/Makefile-genesis.properties
+++ b/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F628A_01_DC_MOTOR.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Tue Jan 09 09:58:07 BRT 2024
+#Tue Jan 09 18:31:38 BRT 2024
 default.languagetoolchain.version=2.45
-default.Pack.dfplocation=/home/ricardo/.mchp_packs/Microchip/PIC16Fxxx_DFP/1.6.156
+default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC16Fxxx_DFP/1.6.156
 conf.ids=default
-default.languagetoolchain.dir=/opt/microchip/xc8/v2.45/bin
-host.id=1py0-qi1w-pg
+default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/bin
+host.id=0
 configurations-xml=15c1168654a4b907dbb3d44d6c8d888b
 default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
-proj.dir=/home/ricardo/projetos/PIC/PIC16F/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F628A_01_DC_MOTOR.X
-host.platform=linux
+proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F628A_01_DC_MOTOR.X
+host.platform=mac
