--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/PIC16F887_03_4_COOLER_LM35_LCD_INT.X/dist/
 /projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/pic16f628a_hc_s04_ultrasonic_lcd.X/dist/
 /projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/pic16f628a_hc_s04_ultrasonic_lcd.X/build/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/pic16f876aa_hc_s04_ultrasonic_lcd.X/build/
