--- a/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/pic16f876aa_hc_s04_ultrasonic_lcd.X/nbproject/Makefile-genesis.properties
+++ b/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/pic16f876aa_hc_s04_ultrasonic_lcd.X/nbproject/Makefile-genesis.properties
@@ -1,10 +1,10 @@
 #
-#Tue Jan 09 18:49:18 BRT 2024
+#Tue Jan 09 23:11:09 BRT 2024
 default.languagetoolchain.version=2.45
 default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC16Fxxx_DFP/1.6.156
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/bin
-host.id=0
+host.id=1vm2-u05r-d5
 configurations-xml=013a13fea110158340ed3e56b69d3781
 default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
