--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@
 /projects/01-Blink/MPLAB_EXAMPLE/pic16f628aBlinkAsm/build/
 /projects/02-LED_CONTROL/MPLAB_EXAMPLES/example3_BlinkInAssembly_pic16f628a/build/
 /projects/02-LED_CONTROL/MPLAB_EXAMPLES/example3_BlinkInAssembly_pic16f628a/dist/
+/projects/NewFolder/pic16f628a_lm35.X/build/
+/projects/NewFolder/pic16f628a_lm35.X/dist/
