--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@
 /projects/02-LED_CONTROL/MPLAB_EXAMPLES/example3_BlinkInAssembly_pic16f628a/dist/
 /projects/NewFolder/pic16f628a_lm35.X/build/
 /projects/NewFolder/pic16f628a_lm35.X/dist/
+/projects/01-Blink/MPLAB_EXAMPLE/BlinkInAssembly_pic16f628a/build/
+/projects/01-Blink/MPLAB_EXAMPLE/BlinkInAssembly_pic16f628a/dist/
