--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@
 /projects/NewFolder/pic16f628a_lm35.X/dist/
 /projects/01-Blink/MPLAB_EXAMPLE/BlinkInAssembly_pic16f628a/build/
 /projects/01-Blink/MPLAB_EXAMPLE/BlinkInAssembly_pic16f628a/dist/
+/projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35.X/build/
+/projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35.X/dist/
