--- a/projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35.X/nbproject/Makefile-genesis.properties
+++ b/projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Sat Jan 13 09:56:18 BRT 2024
+#Sat Jan 13 21:54:18 BRT 2024
 default.languagetoolchain.version=2.45
 default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
+default.com-microchip-mplab-mdbcore-simulator-Simulator.md5=aa9d1097190a66d1314d421a6f2603b4
 default.com-microchip-mplab-nbide-toolchain-picasm-PICASMLanguageToolchain.md5=aab456b33fb548eae4c75930dd850ef3
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/pic-as/bin
 host.id=0
-default.platformTool.md5=null
-configurations-xml=00b9054fffe2fb02e14fa563e96d19ff
+configurations-xml=dfd85318a5d950328d2eb8ee73a98590
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35.X
 host.platform=mac
