--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@
 /projects/01-Blink/MPLAB_EXAMPLE/BlinkInAssembly_pic16f628a/dist/
 /projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35.X/build/
 /projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35.X/dist/
+/projects/01-Blink/MPLAB_EXAMPLE/blink_pic12f675.X/build/
+/projects/01-Blink/MPLAB_EXAMPLE/blink_pic12f675.X/dist/
+/projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_c.X/build/
+/projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_c.X/dist/
