--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@
 /projects/01-Blink/MPLAB_EXAMPLE/blink_pic12f675.X/dist/
 /projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_c.X/build/
 /projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_c.X/dist/
+/projects/01-Blink/MPLAB_EXAMPLE/BlinkAssembly_pic12f675.X/build/
+/projects/01-Blink/MPLAB_EXAMPLE/BlinkAssembly_pic12f675.X/dist/
