--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@
 /projects/01-Blink/MPLAB_EXAMPLE/BlinkAssembly_pic12f675.X/dist/
 /projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35_c.X/build/
 /projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35_c.X/dist/
+/projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35_asm.X/dist/
+/projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35_asm.X/build/
