--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@
 /projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35_asm.X/dist/
 /projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35_asm.X/build/
 /projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35_3leds_c.X/build/
+/projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35_3leds_C.X/dist/
+/projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35_3leds_C.X/build/
