--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@
 /projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35_3leds_c.X/build/
 /projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35_3leds_C.X/dist/
 /projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35_3leds_C.X/build/
+/Tips/AssemblyJourney/MPLAB_EXAMPLES/DIVIDE_EXAMPLE.X/dist/
+/Tips/AssemblyJourney/MPLAB_EXAMPLES/DIVIDE_EXAMPLE.X/build/
