--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@
 /projects/08-LM35_OR_TMP36/MPLAB_EXAMPLES/fever_indicator_pic12f675_lm35_3leds_C.X/build/
 /Tips/AssemblyJourney/MPLAB_EXAMPLES/DIVIDE_EXAMPLE.X/dist/
 /Tips/AssemblyJourney/MPLAB_EXAMPLES/DIVIDE_EXAMPLE.X/build/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/pic12f675_HC_S04_asm.X/build/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/pic12f675_HC_S04_asm.X/dist/
