--- a/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/pic12f675_HC_S04_asm.X/nbproject/Makefile-genesis.properties
+++ b/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/pic12f675_HC_S04_asm.X/nbproject/Makefile-genesis.properties
@@ -1,11 +1,11 @@
 #
-#Sun Jan 21 16:28:49 BRT 2024
+#Sun Jan 21 16:51:17 BRT 2024
 default.languagetoolchain.version=2.45
 default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
 default.com-microchip-mplab-nbide-toolchain-picasm-PICASMLanguageToolchain.md5=aab456b33fb548eae4c75930dd850ef3
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/pic-as/bin
-host.id=e7c8-7heg-p
+host.id=0
 configurations-xml=1b4a9cadd81c762a31d77f6a5b5df45d
 default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
