--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@
 /Tips/AssemblyJourney/MPLAB_EXAMPLES/DIVIDE_EXAMPLE.X/build/
 /projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/pic12f675_HC_S04_asm.X/build/
 /projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/pic12f675_HC_S04_asm.X/dist/
+/Tips/AssemblyJourney/MPLAB_EXAMPLES/MULTIPLY.X/build/
+/Tips/AssemblyJourney/MPLAB_EXAMPLES/MULTIPLY.X/dist/
