--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,13 @@
 /projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/pic12f675_HC_S04_asm.X/dist/
 /Tips/AssemblyJourney/MPLAB_EXAMPLES/MULTIPLY.X/build/
 /Tips/AssemblyJourney/MPLAB_EXAMPLES/MULTIPLY.X/dist/
+/projects/01-Blink/MPLAB_EXAMPLE/pic16f628a_Blink_c.X/build/
+/projects/01-Blink/MPLAB_EXAMPLE/pic16f628a_Blink_c.X/dist/
+/projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC12F675_C.X/dist/
+/projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC12F675_C.X/build/
+/projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC12F675_ASM.X/dist/
+/projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC12F675_ASM.X/build/
+/projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC16F628A_ASM.X/build/
+/projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC16F628A_ASM.X/dist/
+/projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC16F628A_C.X/build/
+/projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC16F628A_C.X/dist/
