--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@
 /projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC16F628A_ASM.X/dist/
 /projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC16F628A_C.X/build/
 /projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC16F628A_C.X/dist/
+/projects/02-LED_CONTROL/MPLAB_EXAMPLES/LED_CONTROL_PIC16F628A_C.X/dist/
+/projects/02-LED_CONTROL/MPLAB_EXAMPLES/LED_CONTROL_PIC16F628A_C.X/build/
