--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,7 @@
 /projects/02-LED_CONTROL/MPLAB_EXAMPLES/LED_CONTROL_PIC16F628A_C.X/build/
 /projects/02-LED_CONTROL/MPLAB_EXAMPLES/LED_CONTROL_PIC16F628A_2_C.X/build/
 /projects/02-LED_CONTROL/MPLAB_EXAMPLES/LED_CONTROL_PIC16F628A_2_C.X/dist/
+/projects/02-LED_CONTROL/MPLAB_EXAMPLES/LED_CONTROL_PIC16F628A_ASM.X/build/
+/projects/02-LED_CONTROL/MPLAB_EXAMPLES/LED_CONTROL_PIC16F628A_ASM.X/dist/
+/projects/02-LED_CONTROL/MPLAB_EXAMPLES/LED_CONTROL_PIC12F675_ASM.X/dist/
+/projects/02-LED_CONTROL/MPLAB_EXAMPLES/LED_CONTROL_PIC12F675_ASM.X/build/
