--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,7 @@
 /projects/02-LED_CONTROL/MPLAB_EXAMPLES/LED_CONTROL_PIC16F628A_ASM.X/dist/
 /projects/02-LED_CONTROL/MPLAB_EXAMPLES/LED_CONTROL_PIC12F675_ASM.X/dist/
 /projects/02-LED_CONTROL/MPLAB_EXAMPLES/LED_CONTROL_PIC12F675_ASM.X/build/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC12F675_3LEDs_ASM.X/build/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC12F675_3LEDs_ASM.X/dist/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC12F675_3LEDs_C.X/build/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC12F675_3LEDs_C.X/dist/
