--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,11 @@
 /projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC12F675_3LEDs_ASM.X/dist/
 /projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC12F675_3LEDs_C.X/build/
 /projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC12F675_3LEDs_C.X/dist/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC16F628A_3LEDs_C.X/dist/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC16F628A_3LEDs_C.X/build/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC16F628A_RGB_LED_C.X/dist/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC16F628A_RGB_LED_C.X/build/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC16F628A_3LEDs_C.X.X/build/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC16F628A_3LEDs_C.X.X/dist/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC16F876A_LCD16x2.X/dist/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC16F876A_LCD16x2.X/build/
