--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,7 @@
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/DC_MOTOR_PIC16F628A_PWM_C.X/build/
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/DC_MOTOR_PIC16F887_ADC_PWM_C.X/dist/
 /projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/DC_MOTOR_PIC16F887_ADC_PWM_C.X/build/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/COOLER_PIC16F88F_4_WIRES_PWM.X/build/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/COOLER_PIC16F88F_4_WIRES_PWM.X/dist/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/COOLER_PIC16F887_4_WIRES_LM35_LCD_INT.X/build/
+/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/COOLER_PIC16F887_4_WIRES_LM35_LCD_INT.X/dist/
