--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,4 @@
 /projects/09-LDR_PHOTOCELL/MPLAB_EXAMPLES/Emergency_Light_LDR_PIC2F675_ASM.X/build/
 /projects/09-LDR_PHOTOCELL/MPLAB_EXAMPLES/Emergency_Light_LDR_PIC2F675_ASM.X/dist/
 /projects/09-LDR_PHOTOCELL/MPLAB_EXAMPLES/Emergency_Light_LDR_PIC12F675_C.X/dist/
+/projects/09-LDR_PHOTOCELL/MPLAB_EXAMPLES/Emergency_Light_LDR_PIC12F675_C.X/build/
