--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,5 @@
 /projects/09-LDR_PHOTOCELL/MPLAB_EXAMPLES/Emergency_Light_LDR_PIC12F675_C.X/build/
 /projects/02-LED_CONTROL/MPLAB_EXAMPLES/LED_CONTROL_PIC10F200_ASM.X/build/
 /projects/02-LED_CONTROL/MPLAB_EXAMPLES/LED_CONTROL_PIC10F200_ASM.X/dist/
+/projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC10F200_C.X/dist/
+/projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC10F200_C.X/build/
