--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,5 @@
 /projects/02-LED_CONTROL/MPLAB_EXAMPLES/LED_CONTROL_PIC10F200_ASM.X/dist/
 /projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC10F200_C.X/dist/
 /projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC10F200_C.X/build/
+/projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC10F200_ASM.X/dist/
+/projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC10F200_ASM.X/build/
