--- a/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC10F200_LED_C.X/nbproject/Makefile-genesis.properties
+++ b/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC10F200_LED_C.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Mon Jan 29 15:58:00 BRT 2024
+#Mon Jan 29 15:59:18 BRT 2024
 default.languagetoolchain.version=2.45
 default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
-default.com-microchip-mplab-nbide-toolchain-picasm-PICASMLanguageToolchain.md5=aab456b33fb548eae4c75930dd850ef3
 conf.ids=default
-default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/pic-as/bin
+default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/bin
 host.id=e7c8-7heg-p
-configurations-xml=44fcffeafd44ee985b22b105323ec133
+configurations-xml=1285bcec1a4268267763d750ea794bf3
 default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
-proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC10F200_ASM.X
+default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
+proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/HC_S04_PIC10F200_LED_C.X
 host.platform=mac
