--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,4 @@
 /projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC10F200_C.X/build/
 /projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC10F200_ASM.X/dist/
 /projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC10F200_ASM.X/build/
+/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC10F200_LED_C.X/build/
