--- a/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC10F200_LED_C.X/nbproject/Makefile-genesis.properties
+++ b/projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC10F200_LED_C.X/nbproject/Makefile-genesis.properties
@@ -1,11 +1,11 @@
 #
-#Mon Jan 29 17:41:28 BRT 2024
+#Mon Jan 29 18:14:08 BRT 2024
 default.languagetoolchain.version=2.45
 default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/bin
-host.id=e7c8-7heg-p
-configurations-xml=faf5db74335c8139e5a3fc182c671edf
+host.id=0
+configurations-xml=a4592b30bf2858d288fb2f9c093f2bbc
 default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
