--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,5 @@
 /projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC10F200_LED_C.X/build/
 /projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC10F200_LED_ASM.X/build/
 /projects/07-HC-S04-URTASONIC/MPLAB_EXAMPLE/HC_S04_PIC10F200_LED_ASM.X/dist/
+/projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_8LEDs.X/build/
+/projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_8LEDs.X/dist/
