--- a/projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_8LEDs_C.X/nbproject/Makefile-genesis.properties
+++ b/projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_8LEDs_C.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,12 @@
 #
-#Tue Jan 30 15:59:23 BRT 2024
+#Tue Jan 30 18:07:45 BRT 2024
 default.languagetoolchain.version=2.45
 default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/bin
 host.id=0
-default.platformTool.md5=null
-configurations-xml=482b3cc0f6089a3f5fd35b2317d663db
+configurations-xml=3351296fd846d5ecf0e00d439995ea02
+default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
 proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_8LEDs_C.X
