--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,5 @@
 /projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_8LEDs_C.X/dist/
 /projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_8LED_ASM.X/dist/
 /projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_8LED_ASM.X/build/
+/projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_16LEDs_C.X/build/
+/projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_16LEDs_C.X/dist/
