--- a/projects/12-ONE_WIRE_COMMUNICATÎON/MPLAB_PROJECT/OW_PIC10F200.X/nbproject/Makefile-genesis.properties
+++ b/projects/12-ONE_WIRE_COMMUNICATÎON/MPLAB_PROJECT/OW_PIC10F200.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Tue Feb 06 15:49:39 BRT 2024
+#Tue Feb 06 19:50:38 BRT 2024
 default.languagetoolchain.version=2.45
 default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
+default.com-microchip-mplab-mdbcore-simulator-Simulator.md5=aa9d1097190a66d1314d421a6f2603b4
 default.com-microchip-mplab-nbide-toolchain-picasm-PICASMLanguageToolchain.md5=aab456b33fb548eae4c75930dd850ef3
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/pic-as/bin
 host.id=0
-default.platformTool.md5=null
-configurations-xml=5283063972ed821a0a428970db4936cf
+configurations-xml=a26861196bcd70a0472c3c9383046d5a
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/12-ONE_WIRE_COMMUNICAT\u00CEON/MPLAB_PROJECT/OW_PIC10F200.X
 host.platform=mac
