--- a/projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC16F628A_C.X/nbproject/Makefile-genesis.properties
+++ b/projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC16F628A_C.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,12 @@
 #
-#Mon Jan 22 11:48:54 BRT 2024
+#Wed Feb 07 17:25:12 BRT 2024
 default.languagetoolchain.version=2.45
 default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC16Fxxx_DFP/1.6.156
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/bin
 host.id=0
-default.platformTool.md5=null
-configurations-xml=f25fc3465fb0dc2f3926500e9be8489a
+configurations-xml=cfbc9c2a0172013d9b84d28221f96c84
+default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
 proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/01-Blink/MPLAB_EXAMPLE/Blink_PIC16F628A_C.X
