--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,5 @@
 /projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_3WIRES_8LEDs_ASM.X/build/
 /projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_3WIRES_8LEDs_ASM.X/dist/
 /projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_3WIRES_16LEDs_C.X/build/
+/projects/12-ONE_WIRE_PROTOCOL/MPLAB_PROJECT/PIC10F200_1_WIRE_DS18B20.X/build/
+/projects/12-ONE_WIRE_PROTOCOL/MPLAB_PROJECT/PIC10F200_1_WIRE_DS18B20.X/dist/
