--- a/projects/12-ONE_WIRE_PROTOCOL/MPLAB_PROJECT/PIC10F200_1_WIRE_DS18B20.X/nbproject/Makefile-genesis.properties
+++ b/projects/12-ONE_WIRE_PROTOCOL/MPLAB_PROJECT/PIC10F200_1_WIRE_DS18B20.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Fri Feb 09 21:35:39 BRT 2024
-default.languagetoolchain.version=2.46
-default.Pack.dfplocation=/Applications/microchip/mplabx/v6.20/packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
-default.com-microchip-mplab-nbide-toolchain-picasm-PICASMLanguageToolchain.md5=9ec152e4e6613316b62acb929bcaf32b
+#Fri Feb 09 22:12:21 BRT 2024
+default.languagetoolchain.version=2.45
+default.Pack.dfplocation=/home/ricardo/.mchp_packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
+default.com-microchip-mplab-nbide-toolchain-picasm-PICASMLanguageToolchain.md5=aab456b33fb548eae4c75930dd850ef3
 conf.ids=default
-default.languagetoolchain.dir=/Applications/microchip/xc8/v2.46/pic-as/bin
-host.id=0
-default.platformTool.md5=null
-configurations-xml=321f2b365f3d8d102c60fd92ce6439f5
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
-proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/12-ONE_WIRE_PROTOCOL/MPLAB_PROJECT/PIC10F200_1_WIRE_DS18B20.X
-host.platform=mac
+default.languagetoolchain.dir=/opt/microchip/xc8/v2.45/pic-as/bin
+host.id=1py0-qi1w-pg
+configurations-xml=830e14c32abac555a55403dff4a1d499
+default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
+proj.dir=/home/ricardo/projetos/PIC/PIC16F/projects/12-ONE_WIRE_PROTOCOL/MPLAB_PROJECT/PIC10F200_1_WIRE_DS18B20.X
+host.platform=linux
