--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,5 @@
 /projects/02-LED_CONTROL/PIC12F675/MPLAB_EXAMPLES/Blink_PIC12F675_C.X/dist/
 /projects/02-LED_CONTROL/PIC12F675/MPLAB_EXAMPLES/LED_CONTROL_PIC12F675_C.X/dist/
 /projects/02-LED_CONTROL/PIC12F675/MPLAB_EXAMPLES/LED_CONTROL_PIC12F675_C.X/build/
+/projects/02-LED_CONTROL/PIC12F675/MPLAB_EXAMPLES/LED_CONTROL_PIC12F675_ASM.X/dist/
+/projects/02-LED_CONTROL/PIC12F675/MPLAB_EXAMPLES/LED_CONTROL_PIC12F675_ASM.X/build/
