--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,6 @@
 /projects/02-LED_CONTROL/PIC12F675/MPLAB_EXAMPLES/LED_CONTROL_PIC12F675_C.X/build/
 /projects/02-LED_CONTROL/PIC12F675/MPLAB_EXAMPLES/LED_CONTROL_PIC12F675_ASM.X/dist/
 /projects/02-LED_CONTROL/PIC12F675/MPLAB_EXAMPLES/LED_CONTROL_PIC12F675_ASM.X/build/
+/projects/03-PIC16F_LCD16x2/PIC16F628A/MPLAB_EXAMPLES/PIC16F628A_LCD.X/build/
+/projects/03-PIC16F_LCD16x2/PIC16F876A/MPLAB_EXAMPLES/PIC16F876A_LCD.X/build/
+/projects/03-PIC16F_LCD16x2/PIC16F887/MPLAB_EXAMPLES/PIC16F887_LCD.X/build/
