--- a/projects/03-PIC16F_LCD16x2/PIC16F887/MPLAB_EXAMPLES/PIC16F887_LCD.X/nbproject/Makefile-genesis.properties
+++ b/projects/03-PIC16F_LCD16x2/PIC16F887/MPLAB_EXAMPLES/PIC16F887_LCD.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Tue Feb 13 17:44:59 BRT 2024
+#Wed Feb 14 11:15:14 BRT 2024
 default.languagetoolchain.version=2.46
-default.Pack.dfplocation=
+default.Pack.dfplocation=/Applications/microchip/mplabx/v6.15/packs/Microchip/PIC16Fxxx_DFP/1.4.149
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.46/bin
 host.id=0
-configurations-xml=01ed0709b904ba920ee3d208359e3539
-default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=5b9902b017a30efdeb77dee75a1e4e51
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
-default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=bf89cdcdd6c0a49174fe4b605ef2b42d
-proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F887_LCD.X
+configurations-xml=305c5179c6d3dfbd699e83ca616f8ec3
+default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
+default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
+proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/03-PIC16F_LCD16x2/PIC16F887/MPLAB_EXAMPLES/PIC16F887_LCD.X
 host.platform=mac
