--- a/projects/03-PIC16F_LCD16x2/PIC16F876A/MPLAB_EXAMPLES/PIC16F876A_LCD.X/nbproject/Makefile-genesis.properties
+++ b/projects/03-PIC16F_LCD16x2/PIC16F876A/MPLAB_EXAMPLES/PIC16F876A_LCD.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Tue Jan 09 09:24:42 BRT 2024
-default.languagetoolchain.version=2.45
-default.Pack.dfplocation=/home/ricardo/.mchp_packs/Microchip/PIC16Fxxx_DFP/1.6.156
+#Wed Feb 14 11:09:25 BRT 2024
+default.languagetoolchain.version=2.46
+default.Pack.dfplocation=
 default.com-microchip-mplab-mdbcore-simulator-Simulator.md5=aa9d1097190a66d1314d421a6f2603b4
 conf.ids=default
-default.languagetoolchain.dir=/opt/microchip/xc8/v2.45/bin
-host.id=1py0-qi1w-pg
-configurations-xml=947c8829d96f5af1bf915044a0b07db7
+default.languagetoolchain.dir=/Applications/microchip/xc8/v2.46/bin
+host.id=0
+configurations-xml=fa9ff2e1e5b81034488c00625cafe9e8
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
-proj.dir=/home/ricardo/projetos/PIC/PIC16F/projects/03-PIC16F_LCD16x2/lcd_library/MPLAB_PROJECTS/PIC16F876A_LCD.X
-host.platform=linux
+proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/03-PIC16F_LCD16x2/PIC16F876A/MPLAB_EXAMPLES/PIC16F876A_LCD.X
+host.platform=mac
