--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,8 @@
 /projects/03-PIC16F_LCD16x2/PIC16F628A/MPLAB_EXAMPLES/PIC16F628A_LCD.X/build/
 /projects/03-PIC16F_LCD16x2/PIC16F876A/MPLAB_EXAMPLES/PIC16F876A_LCD.X/build/
 /projects/03-PIC16F_LCD16x2/PIC16F887/MPLAB_EXAMPLES/PIC16F887_LCD.X/build/
+/projects/05-PWM-SPEED-COOLER/PIC16F628A/MPLABX_EXAMPLES/DC_MOTOR_PIC16F628A_PWM_C.X/build/
+/projects/05-PWM-SPEED-COOLER/PIC16F887/MPLABX_EXAMPLES/COOLER_PIC16F887_4_WIRES_LM35_LCD_INT.X/build/
+/projects/05-PWM-SPEED-COOLER/PIC16F887/MPLABX_EXAMPLES/COOLER_PIC16F88F_4_WIRES_PWM.X/build/
+/projects/05-PWM-SPEED-COOLER/PIC16F887/MPLABX_EXAMPLES/DC_MOTOR_PIC16F887_ADC_PWM_C.X/build/
+/projects/05-PWM-SPEED-COOLER/PIC16F887/MPLABX_EXAMPLES/PIC16F887_04_4_COLLER_RPM.X/build/
