--- a/projects/05-PWM-SPEED-COOLER/PIC16F887/MPLABX_EXAMPLES/DC_MOTOR_PIC16F887_ADC_PWM_C.X/nbproject/Makefile-genesis.properties
+++ b/projects/05-PWM-SPEED-COOLER/PIC16F887/MPLABX_EXAMPLES/DC_MOTOR_PIC16F887_ADC_PWM_C.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Mon Jan 22 17:06:25 BRT 2024
-default.languagetoolchain.version=2.45
-default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC16Fxxx_DFP/1.6.156
+#Wed Feb 14 13:26:39 BRT 2024
+default.languagetoolchain.version=2.46
+default.Pack.dfplocation=
 conf.ids=default
-default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/bin
+default.languagetoolchain.dir=/Applications/microchip/xc8/v2.46/bin
 host.id=0
-configurations-xml=be8e24650db30b978fa106d03085f361
+configurations-xml=25aa5beb137a46d3696d32d4e29f4d25
 default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
-proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/05-PWM-SPEED-COOLER/MPLABX_EXAMPLES/DC_MOTOR_PIC16F887_ADC_PWM_C.X
+proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/05-PWM-SPEED-COOLER/PIC16F887/MPLABX_EXAMPLES/DC_MOTOR_PIC16F887_ADC_PWM_C.X
 host.platform=mac
