--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,5 @@
 /projects/12-ONE_WIRE_PROTOCOL/PIC10F200/MPLAB_PROJECT/PIC10F200_1_WIRE_DS18B20.X/build/
 /projects/12-ONE_WIRE_PROTOCOL/PIC10F200/MPLAB_PROJECT/TMP_CHECK_PULSE.X/build/
 /projects/12-ONE_WIRE_PROTOCOL/PIC10F200/MPLAB_PROJECT/TMP_CHECK_PULSE.X/dist/
+/projects/12-ONE_WIRE_PROTOCOL/PIC10F200/MPLAB_PROJECT/PIC10F200_DS18B20_74HC595_8LED_ASM.X/build/
+/projects/12-ONE_WIRE_PROTOCOL/PIC10F200/MPLAB_PROJECT/PIC10F200_DS18B20_74HC595_8LED_ASM.X/dist/
