--- a/projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_2WIRES_8LEDs_C.X/nbproject/Makefile-genesis.properties
+++ b/projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_2WIRES_8LEDs_C.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Thu Feb 01 16:06:43 BRT 2024
-default.languagetoolchain.version=2.45
-default.Pack.dfplocation=/Users/rcaratti/.mchp_packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
+#Thu Feb 15 19:32:42 BRT 2024
+default.languagetoolchain.version=2.46
+default.Pack.dfplocation=/Applications/microchip/mplabx/v6.20/packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
 conf.ids=default
-default.languagetoolchain.dir=/Applications/microchip/xc8/v2.45/bin
-host.id=0
-configurations-xml=3351296fd846d5ecf0e00d439995ea02
-default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=50072f33d27b72924000ca2dca4b7622
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
-default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
+default.languagetoolchain.dir=/Applications/microchip/xc8/v2.46/bin
+host.id=e7c8-7heg-p
+configurations-xml=703c8247a4d5234a79d22fd20cc26a2f
+default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=5b9902b017a30efdeb77dee75a1e4e51
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
+default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=bf89cdcdd6c0a49174fe4b605ef2b42d
 proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_2WIRES_8LEDs_C.X
 host.platform=mac
