--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,5 @@
 /projects/12-ONE_WIRE_PROTOCOL/PIC10F200/MPLAB_PROJECT/TMP_CHECK_PULSE.X/dist/
 /projects/12-ONE_WIRE_PROTOCOL/PIC10F200/MPLAB_PROJECT/PIC10F200_DS18B20_74HC595_8LED_ASM.X/build/
 /projects/12-ONE_WIRE_PROTOCOL/PIC10F200/MPLAB_PROJECT/PIC10F200_DS18B20_74HC595_8LED_ASM.X/dist/
+/projects/12-ONE_WIRE_PROTOCOL/PIC10F200/MPLAB_PROJECT/TMP_PIC10F200_DS18B20_74HC595_8LED_ASM.X/build/
+/projects/12-ONE_WIRE_PROTOCOL/PIC10F200/MPLAB_PROJECT/TMP_PIC10F200_DS18B20_74HC595_8LED_ASM.X/dist/
