--- a/projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_2WIRES_8LED_ASM.X/nbproject/Makefile-genesis.properties
+++ b/projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_2WIRES_8LED_ASM.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,12 @@
 #
-#Thu Feb 15 19:40:48 BRT 2024
+#Sat Feb 17 13:44:50 BRT 2024
 default.languagetoolchain.version=2.46
 default.Pack.dfplocation=/Applications/microchip/mplabx/v6.20/packs/Microchip/PIC10-12Fxxx_DFP/1.7.178
 default.com-microchip-mplab-nbide-toolchain-picasm-PICASMLanguageToolchain.md5=9ec152e4e6613316b62acb929bcaf32b
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.46/pic-as/bin
-host.id=e7c8-7heg-p
-configurations-xml=122d85e523d2510528e1b77e97ce8dbc
+host.id=0
+configurations-xml=24aac061fd9bb445dffc13cc43964bdb
 default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=5b9902b017a30efdeb77dee75a1e4e51
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
 proj.dir=/Users/rcaratti/Desenvolvimento/eu/PIC/PIC16F/projects/10-74HC595/MPLAB_EXAMPLES/PIC10F200_74HC595_2WIRES_8LED_ASM.X
