--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,5 @@
 /projects/12-ONE_WIRE_PROTOCOL/PIC10F200/MPLAB_PROJECT/TMP_PIC10F200_DS18B20_74HC595_8LED_ASM.X/dist/
 /projects/01-Blink/PIC10F200/MPLAB_EXAMPLE/Blink_PIC10F200_ASM.X/dist/
 /projects/01-Blink/PIC10F200/MPLAB_EXAMPLE/Blink_PIC10F200_ASM.X/build/
+/projects/13-SINGLE_WIRE_WITH_DHT11/PIC10F200/MPLAB_EXAMPLE/PIC10F200_DHT11_74HC595_8LEDs.X/build/
+/projects/13-SINGLE_WIRE_WITH_DHT11/PIC10F200/MPLAB_EXAMPLE/PIC10F200_DHT11_74HC595_8LEDs.X/dist/
