--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,5 @@
 /projects/01-Blink/PIC10F200/MPLAB_EXAMPLE/Blink_PIC10F200_ASM.X/build/
 /projects/13-SINGLE_WIRE_WITH_DHT11/PIC10F200/MPLAB_EXAMPLE/PIC10F200_DHT11_74HC595_8LEDs.X/build/
 /projects/13-SINGLE_WIRE_WITH_DHT11/PIC10F200/MPLAB_EXAMPLE/PIC10F200_DHT11_74HC595_8LEDs.X/dist/
+/projects/13-SINGLE_WIRE_WITH_DHT11/PIC16F628A/MPLAB_EXAMPLE/PIC16F628A_DHT11_LCD16x2.X/build/
+/projects/13-SINGLE_WIRE_WITH_DHT11/PIC16F628A/MPLAB_EXAMPLE/PIC16F628A_DHT11_LCD16x2.X/dist/
